[package]
name = "loot-condition-interpreter"
version = "5.0.0"
authors = ["Oliver Hamlet <oliver@ortham.net>"]
license = "MIT"
edition = "2021"

[dependencies]
crc32fast = "1.4.2"
esplugin = "6.1.1"
nom = "8.0.0"
pelite = "0.10.0"
regex = "1.11.1"
unicase = "2.8.1"

[dev-dependencies]
criterion = "0.5.0"
tempfile = "3.16.0"

[[bench]]
name = "eval"
harness = false

[workspace]
members = ["ffi"]
