[package]
name = "loot-condition-interpreter"
version = "5.3.2"
authors = ["Oliver Hamlet <oliver@ortham.net>"]
description = "Parse and evaluate LOOT metadata condition strings."
repository = "https://github.com/Ortham/libloadorder.git"
license = "MIT"
edition = "2021"

[dependencies]
crc32fast = "1.5.0"
esplugin = "6.1.2"
nom = "8.0.0"
pelite = "0.10.0"
regex = "1.11.1"
unicase = "2.8.1"

[dev-dependencies]
criterion = "0.6.0"
tempfile = "3.20.0"

[[bench]]
name = "eval"
harness = false

[workspace]
members = ["ffi"]
