[package]
name = "loot-condition-interpreter"
description = "Parse and evaluate LOOT metadata condition strings."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
crc32fast = "1.5.0"
esplugin = "6.1.2"
nom = "8.0.0"
pelite = "0.10.0"
regex = "1.11.1"
unicase = "2.8.1"

[dev-dependencies]
criterion = "0.7.0"
tempfile = "3.20.0"

[[bench]]
name = "eval"
harness = false

[workspace]
members = ["ffi"]

[workspace.package]
version = "5.3.2"
authors = ["Oliver Hamlet <oliver@ortham.net>"]
repository = "https://github.com/loot/loot-condition-interpreter.git"
license = "MIT"
edition = "2021"
