[package]
name = "loot-condition-interpreter-ffi"
version = "2.3.0"
authors = ["Oliver Hamlet <oliver@ortham.io>"]
license = "MIT"
build = "build.rs"
edition = "2018"

[dependencies]
loot-condition-interpreter = { path = ".." }
libc = "0.2"

[lib]
name = "loot_condition_interpreter_ffi"
crate-type = ["staticlib"]

[features]
default = []
ffi-headers = ["cbindgen"]

[build-dependencies]
cbindgen = { version = "0.24", optional = true }
