[package]
name = "loot-condition-interpreter-ffi"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
loot-condition-interpreter = { path = ".." }
libc = "0.2"

[lib]
name = "loot_condition_interpreter_ffi"
crate-type = ["staticlib"]
